@@ -1,0 +1,10 @@
+#ifndef __LUCENE_INDEX_TEST_INDEX_WRITER__
+#define __LUCENE_INDEX_TEST_INDEX_WRITER__
+
+#include <Foundation/Foundation.h>
+#include <UnitKit/UnitKit.h>
+
+@interface TestIndexWriter: NSObject <UKTest>
+@end
+
+#endif /* __LUCENE_INDEX_TEST_INDEX_WRITER__ */
